--- a/trab2/css/estilo.css
+++ b/trab2/css/estilo.css
@@ -117,7 +117,7 @@ nav {
     border-radius: 10px;
     margin-top: 5px;
 }
-#about-usl {
+.nav-button {
     background: var(--scolor);
     padding: 10px;
     border-radius: 10px;
