--- a/trab2/css/estilo.css
+++ b/trab2/css/estilo.css
@@ -18,11 +18,8 @@ section {
     list-style: none;
     color: var(--text-color);
     scroll-behavior: smooth;
-    font-family: "Lobster", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-
-    font-size: 18px;
+    font-family: "Montserrat", sans-serif;    
+    font-size: 16px;
 }
 body
 {   background-color: var(--background);
