--- a/trab2/css/estilo.css
+++ b/trab2/css/estilo.css
@@ -47,6 +47,7 @@ nav {
    border-radius: 10px; 
    flex: 0.7;
    background: white;
+   min-width: 50px;
 }
 #search-box input {
     background: white;
