--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -229,7 +229,6 @@ li a {
 }
 #section-2 img {
     margin-top: 50px;
-    width: 400px;
 }
 fieldset {
     border: 1px solid;
@@ -246,14 +245,15 @@ form {
 form input {
     height: 40px;
 }
+#search-text {
+    opacity: 0.9;
+    margin-top: 3px;
+    margin-right: 5px;
+}
 
 @media (width < 810px){
     #section-2 {
         grid-template-columns: 100%;
         row-gap: 20px;
     }
-}
-
-.hidden {
-    display: none;
 }
