--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -21,7 +21,15 @@
 }
 section {
     min-height: 100vh;
+    animation: linear chega both;
+    animation-timeline: view();
+    animation-range: cover 0% cover 50%;
 }
+@keyframes chega {
+    0% { transform:translateY(10%) }
+    100% { transform:translateY(0%) }
+}
+
 body
 {   background-color: var(--background);
 }
@@ -251,7 +259,7 @@ form input {
     margin-top: 3px;
     margin-right: 5px;
     min-width: 83px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 #imagens {
     display: grid;
