--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -19,10 +19,10 @@
     font-size: 16px;
     scroll-margin-top: 200px;
 }
-section {
+/* section {
     min-height: 100vh;
-    animation-name: slide; /* nome da animação */
-    animation-duration: 1s;  /* tempo da animação */
+    animation-name: slide; 
+    animation-duration: 1s; 
     animation-timing-function: linear;
     animation-fill-mode: both;
     animation-timeline: view();
@@ -36,7 +36,7 @@ section {
     100% {
         transform: translateY(0%);
     }
-}
+} */
 
 body
 {   background-color: var(--background);
