--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -19,7 +19,7 @@
     font-size: 16px;
     scroll-margin-top: 200px;
 }
-/* section {
+section {
     min-height: 100vh;
     animation-name: slide; 
     animation-duration: 1s; 
@@ -36,7 +36,7 @@
     100% {
         transform: translateY(0%);
     }
-} */
+} 
 
 body
 {   background-color: var(--background);
