--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -19,16 +19,17 @@
     font-size: 16px;
     scroll-margin-top: 200px;
 }
-/* section {
+ section {
     min-height: 100vh;
-    animation-name: slide; 
+    /*animation-name: slide; 
     animation-duration: 1s; 
     animation-timing-function: linear;
     animation-fill-mode: both;
     animation-timeline: view();
     animation-range: cover 0% cover 50%;
+     */
 }
-
+/*
 @keyframes slide {
     0% {
         transform: translateY(100%);
